--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="João Vitor - Y2K Portfolio" />
     <meta property="og:description" content="Check out João Vitor's cybertribal Y2K-themed portfolio featuring web development and graphic design projects." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jotavtech.github.io/portfolio-final/" />
+    <meta property="og:url" content="https://joao-vitor-portfolio.com" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Space+Mono:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -19,5 +19,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
   </body>
 </html>
